2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: set to blue more light the
	color for unknow status for percentile item, and set the size of items
	create from the wizzard to 20 characteres.

	Merged bugfix from trunk.

2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php: into the function "html_print_select" removed
	the hardcode style for the selectbox.
	
	* godmode/reporting/visual_console_builder.wizard.php: force the style of
	content table of form.

	Merged bugfix from trunk.

2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: apply format to graph in the
	data when show value in percentile item.

	Merged bugfix from trunk.

2012-03-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
    * include/functions_ui.php: Skin is not used on logon error.
    
    Merged bugfix from trunk.
    
	* godmode/menu.php: Delete autorefresh in Pandora db interface.
	
	Merged bugfix from trunk.

2012-03-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: added lost feature to set into
	the wizard the kind of label ("agent", "module", "agent-module" or empty).
	
	Meged feature from trunk.

2012-03-12 Miguel de Dios  <miguel.dedios@artica.es>

	*include/ajax/agent.php: added the query "get_agents_group" for getting the
	list of agents from a group pass as ajax parameter.
	
	* include/functions_visual_map.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: added into the wizzard a field
	group to filter agents, and the feature to choose the item to create with
	the massive wizzard.
	
	Meged feature from trunk.

2012-03-12  Hirofumi Kosaka  <kosaka@rworks.jp>
